# AI-window

./: .gitignore  IMAGE_UPLOAD_FIX.md  IMAGE_UPLOAD_IMPLEMENTATION.md  MINIMAL_MODE_TRANSPARENCY_FIX.md  README.md  STARTUP_OPTIMIZATION_SUMMARY.md  package-lock.json  package.json  validate-json.js  vite.config.js
patches/: underscore+1.13.7.patch
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: bindings.ts  i18n.ts
src/lib/components/: Markdown.svelte
src/lib/components/icons/: AiIcon.svelte  ClearIcon.svelte  LanguageIcon.svelte  LoadingIcon.svelte  LogoIcon.svelte  PlusIcon.svelte  SendIcon.svelte  SettingsIcon.svelte  index.ts
src/lib/locales/: en.json  ja.json  zh-CN.json  zh-TW.json
src/lib/stores/: chat.store.ts  settings.store.ts  theme.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/settings/: +page.svelte
